The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.38.1 - December ??, 2009

    Workaround module meta-predicate semantics in order to support calls to
    module meta-predicates specified in use_module/2 directives within objects
    and categories.

    Code cleanup of meta-predicate directives compilation. Tighten checks of
    meta-predicate directives and meta-predicate directive arguments.

    Improved compilation of call/2-N goals.

    Improved performance of the lambda expression Free/Goal, usually used in
    bagof/3 and setof/3 calls.

    Improved lambda expression error-checking and added support for using a
    (>>)/2 lambda expression as a goal.

    Corrected a bug in handling the meta-call context for lambda expressions.

    Corrected a typo in the exception term generated when sending a message to
    an object corresponding to a built-in local method.

    Updated the CxProlog config file in order to set write term and write list
    limits that allow compilation of the Logtalk libraries and examples (the
    default values are two low in some cases leading to compilation errors).
    In addition, take advantage of the new "version_data" flag, thus requiring
    version 0.97.4 or a later version.

    Updated the SWI-Prolog config file in order to recognize and compile the
    proprietary directive at_halt/1.

    Updated the B-Prolog config file in order to add a missing meta-predicate
    declaration for the foreach/2 built-in predicate.

    Expanded the "lambdas" example with a contribution by Artur Miguel Dias
    and with more sample queries (including non-deterministic ones).

    Added syntax coloring support for the ^/2 existential quantifier operator
    for most supported text editors and syntax highlighters. Added sample code
    using the ^/2 existential quantifier to the syntax coloring test file.

